# maya

./: README.md  pyproject.toml
maya/: Dockerfile  manage.py
maya/blog/: models.py
maya/blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpagegalleryimage.py  0004_auto_20200318_1348.py  0005_auto_20200318_1350.py  0006_blogtagindexpage.py  0007_auto_20200318_1419.py
maya/blog/templates/blog/: blog_index_page.html  blog_page.html  blog_tag_index_page.html
maya/home/: models.py
maya/home/migrations/: 0003_homepage_body.py
maya/home/templates/home/: home_page.html
maya/maya/: wsgi.py
maya/maya/settings/: base.py  dev.py
maya/maya/templates/: base.html
