[tool.poetry]
name = "maya"
version = "0.1.0"
description = "Content management system made with wagtail.io"
authors = ["Zorex Salvo <zorexsalvo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wagtail = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
